--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
     <section class="cta">
         <div class="container">
             <h2>开启您的无人机职业之路</h2>
-            <p>点击下方免费领取价值¥999的无人机学习资料包！<br>前50名报名者可享培训费立减优惠！</p>
+            <p>点击下方免费领取无人机学习资料包！<br>前50名报名者可享培训费立减优惠！</p>
             <a href="https://work.weixin.qq.com/ca/cawcde6a0659c0b817" class="btn" target="_blank">
                 <i class="fas fa-download"></i> 免费领取学习资料
             </a>
